# camp-tools

./: README.md  pyproject.toml
camp/: __init__.py  advisory.py  archive.py  artifacts.py  badge.py  build.py  checks.py  cli.py  composer.py  ingest.py  lint.py  malware.py  moodleversions.py  reviews.py  scaffold.py  scan.py  site.py  tuf_repo.py  validate.py  verify.py
camp/fonts/: LICENSE-NOTE.txt
camp/schema/: index-entry.schema.json  listing.schema.json
experiments/: tuf_prototype.py
tests/: conftest.py  test_a11y.py  test_advisory.py  test_archive.py  test_build_verify.py  test_collisions.py  test_composer_constraints.py  test_incremental_publish.py  test_ingest.py  test_lint.py  test_malware.py  test_moodleversions.py  test_optout.py  test_registry.py  test_rekor.py  test_reviews.py  test_scan.py  test_tuf.py
